--- a/SEA.tex
+++ b/SEA.tex
@@ -1,7 +1,8 @@
 \documentclass[preprint,5p, twocolumn]{elsarticle}
-\usepackage{amsmath,amssymb,ifthen,booktabs,color,float,nomencl,lineno,multirow,hyperref}
+\usepackage{amsmath,amssymb,ifthen,booktabs,color,float,nomencl,lineno,multirow,hyperref,tabu}
 \biboptions{numbers,sort&compress}
 \modulolinenumbers[5]
+\bibliographystyle{model3-num-names}
 %\usepackage[figure]{hypcap}
 \makenomenclature
 
@@ -27,7 +28,7 @@
 \title{Performance comparison of new and traditional arrangements of a dish-Stirling system}
 \date{}
 \author[label1]{Cheng Zhang}
-\author[label1]{Yanping Zhang\corref{cor1}}
+\author[label1]{Ycxanping Zhang\corref{cor1}}
 \ead{zyp2817@hust.edu.cn}
 \author[label2]{Inmaculada Arauzo}
 \author[label1]{Wei Gao}
@@ -40,7 +41,9 @@
 \address[label2]{CIRCE Research Institute, University of Zaragoza, Maria de Luna, Zaragoza, Spain}
 
 \begin{abstract}
-The solar dish Stirling engine system is well known for its high light-to-electricity conversion efficiency. However, solar dish systems are not widely applied due to the limitation of dish collector size and Stirling engine size. This paper puts forward an effective way to overcome the limitation by using Stirling engine array (SEA) in the solar dish system to increase the power of Stirling engines. The performance of an SEA is affected by its connection type. To find out the influence of connection type, five basic connection types were proposed and SEA analytical models were developed based on Stirling engine model. In the engine model, non-ideal heat transfer, power losses due to pressure drop, finite speed of piston and mechanical friction, and heat losses due to internal conduction and shuttle conduction were analyzed. The model was evaluated by considering the prototype GPU-3 Stirling engine as a case study. Based on the SEA models, global efficiency and power of different connection types of SEAs with the same hot and cold flows were calculated. Effects of different factors were considered. Result shows that flow order has little influence on the SEA performance, and serial flows connection type is the best for an SEA to obtain best performance and adaptability for given heating and cooling fluids.
+The solar dish Stirling engine system is well known for its high light-to-electricity conversion efficiency. However, solar dish systems are not widely applied due to the limitation of dish collector size and Stirling engine size. This paper puts forward an effective way to overcome the limitation by using Stirling engine array (SEA) in the solar dish system to increase the power of Stirling engines. 
+%The performance of an SEA is affected by its connection type. 
+To find out the influence of connection type on the performance of SEA, five basic connection types were proposed and SEA analytical models were developed based on a proposed Stirling engine model. In the engine model, various losses and irreversibilities were analyzed. The model was evaluated by considering the prototype GPU-3 Stirling engine as a case study. Based on the SEA models, global efficiency and power of different connection types of SEAs with the same hot and cold flows were evaluated. Effects of different factors on the performance of SEA were considered. Result shows that flow order has little influence on the SEA performance, and serial flows connection type is the best for an SEA to obtain best performance and adaptability for given heating and cooling fluids.
 \end{abstract}
 
 \begin{keyword}Stirling cycle, Stirling engine model, Stirling engine array, connection type
@@ -56,7 +59,9 @@ With the emphasis on energy and environmental impact, recently gaining attention
 
 The Stirling engine is widely used on solar dish system, known as dish-Stirling system. In a traditional dish-Stirling system, each Stirling engines is put on the focus of a parabolic dish to use the heat collected by the dish receiver for power generation. However, solar dish systems are not widely applied yet for its small capacity. Its capacity is mainly constrained by two factors: dish collector size and Stirling engine size. The dish size is limited for the cost and difficulty of production of large mirrors. The Stirling engine size is limited for its low power-to-weight ratio. The tracking feature of dish collector limits the weight of engine on the focal point. Besides, the size of engine is limited for it overlaps part of the collector.
 
-This paper presents new arrangements for dish-Stirling system demonstrated in Figure~\ref{fig:Dish_SEA} to solve the limitations. Stirling engines are put on the ground as a Stirling engine array (SEA). Heat collected by multiple dish collectors, or other types of collectors, or combination of different types of collectors, even heat from different heat sources is supplied to the SEA. Since the engines are static installations on the ground where space and weight are not at a premium any more, they can reach higher capacities. They can be connected in a different connection type and their performance may be improved compared to the traditional arrangement in which they are put on the focal points of each dish collector separately.
+This paper presents new arrangements for dish-Stirling system demonstrated in Figure~\ref{fig:Dish_SEA} to solve the limitations. In this figure, Stirling engines are put on the ground as a Stirling engine array (SEA). Heat collected by multiple dish collectors
+%, or other types of collectors, or combination of different types of collectors, even heat from different heat sources
+ is supplied to the SEA by heating fluid. Since the engines are static installations on the ground where space and weight are not at a premium any more, they can reach higher capacities. They can be connected in a different connection type and their performance may be improved compared to the traditional arrangement in which they are put on the focal points of each dish collector separately.
 
 %The Stirling engine is widely used on solar dish system, in which it is put on the focus of parabolic dish to use the heat collected by the dish receiver for power generation. However, solar dish systems are not widely applied yet for its small capacity. Its capacity is mainly constrained by two factors: dish collector size and Stirling engine size. The dish size is limited for the cost and difficulty of production of large mirrors. The Stirling engine size is limited for its low power-to-weight ratio. The tracking feature of dish collector limits the weight of engine on the focal point. Besides, the size of engine is limited for it will overlap part of the collector. This paper presents a solution demonstrated in Figure~\ref{fig:Dish_SEA}. Heat collected by multiple dish collectors, or other types of collectors, or combination of different types of collectors, even heat from different heat sources can be used for a Stirling engine array (SEA). Stirling engines are put on the ground as static installations where space and weight are not at a premium any more. The engines can reach higher capacities, they can be connected in a different connection type and their performance may be improved.
 \nomenclature[C]{SEA}{Stirling engine array}
@@ -73,7 +78,7 @@ Great attention has focused on the application using parabolic dish to collect h
 
 A large number of studies have been done on Stirling engine analysis. To describe a Stirling engine's behavior precisely is a difficult task due to the various losses and irreversibilities in the engine.
 %Recent investigations~\cite{Tlili2006,Li2016} have found that these losses and irreversibilities in the thermodynamic cycle have significant importance in predicting the performance of Stirling engines. 
-Researchers have done a lot of work to build a precise Stirling engine model. Different models of Stirling engines were developed using empirical~\cite{Senft1998,Costea1999,Prieto2003,Organ2013,Kongtragool2005,Thombare2008}, analytical~\cite{Ohtomo1995,Rogdakis2004,Kongtragool2006,Puech2011,Formosa2010,Shazly2014,Cullen2011,Ahmadi2013,Ahmadi2013b,Tursunbaev2007} and numerical methods~\cite{Urieli1984,Ni2016,Jia2016,Strauss2010,Abbas2014,Araoz2015,Babaelahi2015,Barreto2017,Wu1998,Li2011,Hosseinzade2015}.
+Researchers have done a lot of work to build a precise Stirling engine model. Different models of Stirling engines were developed using empirical~\cite{Senft1998,Costea1999,Prieto2003,Organ2013,Kongtragool2005,Thombare2008,Lombardi2010}, analytical~\cite{Ohtomo1995,Wang2002,Rogdakis2004,Kongtragool2006,Puech2011,Formosa2010,Shazly2014,Cullen2011,Cheng2012,Ahmadi2013,Ahmadi2013b,Tursunbaev2007} and numerical methods~\cite{Urieli1984,Ni2016,Jia2016,Strauss2010,Abbas2014,Araoz2015,Babaelahi2015,Barreto2017,Wu1998,Li2011,Hosseinzade2015}.
 
 Among these methods, numerical methods obtain the most accurate models. Urieli and Berchowitz~\cite{Urieli1984} proposed an adiabatic model of Stirling engine considering some irreversible effects such as non-ideal heat transfer processes and pressure drop effect using numerical methods. The model is known as Simple model. Many researchers developed more accurate models based on the Simple model by using alternative methods or including more loss mechanisms. 
 Ni et al.~\cite{Ni2016} proposed an improved Simple analytical model which considers the influence mechanism of rotary speed, pressure and working gas in the view of heat/power losses for Stirling engine performance.
@@ -83,7 +88,7 @@ Abbas~\cite{Abbas2014} considered the effects of non-ideal regeneration, shuttle
 Araoz et al.~\cite{Araoz2015} developed a rigorous Stirling engine model with adiabatic working spaces, isothermal heat exchangers. It considers dead volumes, and imperfect regeneration, mechanical pumping losses due to friction, limited heat transfer and thermal losses on the heat exchangers. The model is suitable for different engine configurations ($\alpha$, $\beta$ and $\gamma$ engines).
 Babaelahi and Syyaadi~\cite{Babaelahi2015} proposed a new numerical thermal model based on polytropic expansion/compression processes. Differential equations in the expansion/compression processes were modified to polytropic processes in the new model. New model shows a better performance prediction compared with previous models.
 
-With the development of finite-time thermodynamics, many researchers studied the the finite-time thermodynamic performance of the Stirling engine. This analysis can also be used in the case of irreversible machines further considering the internal irreversibilities of a Stirling engine such as friction, pressure drop and entropy generation~\cite{Barreto2017}.
+With the development of finite-time thermodynamics, many researchers studied the finite-time thermodynamic performance of the Stirling engine. This analysis can also be used in the case of irreversible machines further considering the internal irreversibilities of a Stirling engine such as friction, pressure drop and entropy generation~\cite{Barreto2017}.
 Wu et al.~\cite{Wu1998} developed a numerical model considering finite-time effect to find out the relationship between the net power output and thermal efficiency of the engine. 
 Li et al.~\cite{Li2011} developed a mathematical model of a high temperature differential dish-Stirling system with finite-time thermodynamics. Finite-rate heat transfer, regenerative heat losses, conductive thermal bridging losses and finite regeneration processes of the Stirling engine were considered in the model.
 Hosseinzade~\cite{Hosseinzade2015} presented a new closed-form thermal model for the thermal simulation of Stirling engines based on the combination of polytropic analysis of expansion/compression processes and the concept of finite speed thermodynamics.
@@ -102,23 +107,21 @@ Luo et al.~\cite{Luo2016} proposed a multiple optimization method that combines 
 
 %There are multiple connection types for Stirling engines in an SEA, and the connection type will change the heating and cooling fluid properties, such as flow rate and temperature, of each Stirling engine in an SEA, which can affect the efficiency of each Stirling engine. So the same Stirling engines with the same heating and cooling fluid may produce different amount of work with different thermal efficiencies depending on their connection types.
 
-However, the literature review indicates that the analysis of arrangements of Stirling engines, classification and performance of the SEA, has not been reported till now. In this regard, this paper investigated the connection types of SEA and its influence on SEA performance. Connection types of SEA were classified and 5 basic connection types were put forward. According to Organ's theory~\cite{Organ1997}, one equivalent analytical Stirling engine model always exists for different types ($\alpha$ type, $\beta$ type and $\gamma$ type) of engines. To find out the influence of connection type of SEA and to avoid falling into the problem of developing specific Stirling engine model, a Stirling engine model based on some assumptions and simplifications was developed. This model was evaluated using experimental data of the General Motor GPU-3 Stirling engine prototype. Imperfect regeneration and some irreversibilities were considered. Heat transfer analysis of Stirling engine with heating and cooling fluids was also included. SEA models of different connection types were built depending on the engine model. Impacts of different parameters on the performance of these models were analyzed.
+However, the literature review indicates that the analysis of arrangements of Stirling engines, classification and performance of the SEA, has not been reported till now. In this regard, this paper investigated the connection types of SEA and its influence on SEA performance. Connection types of SEA were classified and five basic connection types were put forward. According to Organ's theory~\cite{Organ1997}, one equivalent analytical Stirling engine model always exists for different types ($\alpha$ type, $\beta$ type and $\gamma$ type) of engines. To find out the influence of connection type of SEA and to avoid falling into the problem of developing specific Stirling engine model, a Stirling engine model based on some assumptions and simplifications was developed. This model was evaluated using experimental data of the General Motor GPU-3 Stirling engine prototype. Imperfect regeneration and some irreversibilities were considered. Heat transfer analysis of Stirling engine with heating and cooling fluids was also included. SEA models of different connection types were built depending on the engine model. Impacts of different parameters on the performance of these models were analyzed.
 
-\section{Connection types of SEA}
-For a single Stirling engine, the heat transfer processes between fluids and engine are independent and irrelevant with the direction of the flows, which means the efficiency and power are not affected by the direction of fluids. However, for an SEA, the connection type will affect the temperature profiles through the array and the specific work production, both of which will determine the efficiency and power of the SEA. It is practically significant to investigate the influence of connection type of an SEA on its performance. Then it is essential to classify the SEAs based on the connection type.
+\section{Connection types of SEA~\label{sec:connectionTypes}}
+For a single Stirling engine, the heat transfer processes between fluids and engine are independent and irrelevant with the direction of the flows, which means the efficiency and power are not affected by the direction of fluids. However, for an SEA, the connection type will affect the temperature profiles through the array and the specific work production, both of which will determine the efficiency and power of the SEA. It is practically significant to investigate the influence of connection type of an SEA on its performance. Using parallel flow, on the one hand, will reduce the flow rate of the fluid, which will reduce the power of each engine; however, on the other hand, will take the advantage of higher inlet heating fluid temperature (or lower inlet cooling fluid temperature), which may increase the power of each engine. friend who is Using serial flow, on the one hand, will increase the flow rate of the fluid, which will increase the power of each engine; however, on the other hand, the inlet heating fluid temperature reduces with the flow direction (or the inlet cooling fluid temperature increases with the flow direction), which leads to lower engine power along the flow direction. Using the same order will lead to largest fluid temperature difference (temperature difference of the heating and cooling fluids) at the first engines and smallest fluid temperature difference at the last engines. Using the reverse order will lead to more averaged fluid temperature differences of the engines. For a heat exchanger, the reverse order (counterflow), which leads to a smaller fluid temperature difference, has a better heat transfer effect for its lower exergy loss. However, for a Stirling engine, the smaller fluid temperature difference leads to lower performance due to the lower temperature difference of the working gas in the hot space and cold space. To find out the influence of connection types on the performance of SEA, it is essential to classify the connection types.
 
-5 basic connection types of SEA were summarized according to the direction-irrelevant feature of Stirling engine, as shown in Figure~\ref{fig:SEA}. Type 1 is parallel flow, Type 2 is serial flows in the same order, Type 3 is serial flows in the reverse order, Type 4 is heating fluid in serial flow and cooling fluid in parallel flow and Type 5 is heating fluid in parallel flow and cooling fluid in serial flow.
+Five basic connection types of SEA were summarized according to the direction-irrelevant feature of Stirling engine, as shown in Figure~\ref{fig:SEA}. Type 1 is parallel flow, Type 2 is serial flows in the same order, Type 3 is serial flows in the reverse order, Type 4 is heating fluid in serial flow and cooling fluid in parallel flow and Type 5 is heating fluid in parallel flow and cooling fluid in serial flow. All other connection types are the combination of these five basic connection types. For instance, an SEA in Figure~\ref{fig:SEA_eg} is the combination of Type 2 and Type 4. 
+%Besides, in the tradition form of solar dish system, Stirling engines are put on the focus points of the dish collectors, which can be considered as a particular case of Type 1.
 
 \noindent \begin{figure}[htbp]
 \begin{center}
 	\includegraphics[width = 0.7\columnwidth]{./graphics/BasicSEA}
-	\caption{5 basic connection types of SEA}
+	\caption{Five basic connection types of SEA}
 	\label{fig:SEA}
 \end{center}
 \end{figure}
-
-All other connection types are the combination of these 5 basic connection types. For instance, an SEA in Figure~\ref{fig:SEA_eg} is the combination of Type 2 and Type 4. 
-%Besides, in the tradition form of solar dish system, Stirling engines are put on the focus points of the dish collectors, which can be considered as a particular case of Type 1.
 
 \noindent \begin{figure}[htbp]
 \begin{center}
@@ -131,7 +134,7 @@ All other connection types are the combination of these 5 basic connection types
 \section{Thermodynamic analysis of Stirling engine}
 \subsection{Stirling engine model\label{sec:StirlingEngineModel}}
 \subsubsection{Theoretical Stirling cycle}
-In a Stirling cycle, there are two isothermal processes that exchange heat with heating and cooling fluids, two isochoric processes that exchange heat with regenerator. In Figure~\ref{fig:StirlingCycle}, the heat absorbed by regenerator in process 4-1 is reused in process 2-3, but only able to heat the working gas from 2 to 3' due to the imperfect regeneration. $e$ is defined as the regenerator effectiveness\cite{Formosa2010,Juhasz2010}, $e=\frac{T_R-T_L}{T_H-T_L}$, where $T_H$ is the temperature in the hot space, $T_L$ is the temperature in the cold space, $T_R$ is the effective working fluid temperature in the regenerator.
+In a Stirling cycle, there are two isothermal processes that exchange heat with heating and cooling fluids, two isochoric processes that exchange heat with regenerator. Figure~\ref{fig:StirlingCycle} shows the schematic of a Stirling cycle, process 1-2 and process 3-4 are the two isothermal processes, process 2-3 and process 4-1 are the two isochoric processes. The heat absorbed by regenerator in process 4-1 is reused in process 2-3, but only able to heat the working gas from 2 to 3' due to the imperfect regeneration. $e$ is defined as the regenerator effectiveness for the imperfect regeneration~\cite{Formosa2010}, $e=\frac{T_R-T_L}{T_H-T_L}$, where $T_H$ is the temperature in the hot space, $T_L$ is the temperature in the cold space, $T_R$ is the effective working fluid temperature in the regenerator.
 \nomenclature{$e$}{regenerator effectiveness}
 \nomenclature{$T_R$}{effective working fluid temperature in regenerator (K)}
 \nomenclature{$T_L$}{working fluid temperature in the cold space (K)}
@@ -151,7 +154,7 @@ In order to obtain a simplified analytical model, several simplifications were m
 \item The working gas in Stirling engines obeys the idea gas law. 
 \item No heat loss to the environment for Stirling engines.
 \item Overall heat transfer coefficients of the fluids are constant.
-\item A symmetrical regenerator behavior is assumed~\cite{Formosa2010,Juhasz2010} so that a simple effectiveness can be obtain by $T_{R}=\frac{T_{H}-T_{L}}{\ln(T_{H}/T_{L})}$.
+\item A symmetrical regenerator behavior is assumed~\cite{Formosa2010} so that a simple effectiveness can be obtain by $T_{R}=\frac{T_{H}-T_{L}}{\ln(T_{H}/T_{L})}$.
 \end{itemize}
 
 To consider internal irreversibilities in Stirling cycle made by dead volumes, as described in~\cite{Duan2014}, total dead volume $V_D$ is divided into heater dead volume $V_{DH}$, regenerator dead volume $V_{DR}$ and cooler dead volume $V_{DC}$. There exists a factor $K$ to describe the dead volumes under different temperatures. $K$ is relevant with temperatures in the process and regenerator effectiveness.
@@ -381,7 +384,7 @@ Efficiency of the Stirling engine
 \end{equation}
 
 
-\subsection{Model validation}
+\subsection{Model validation~\label{sec:modelValidation}}
 
 Evaluation of the developed thermal model was performed by considering the GPU-3 Stirling engine as a case study. Design specifications of the GPU-3 Stirling engine are indicated in Table~\ref{tab:GPU3parameters}. The thermal efficiency and power of the proposed Stirling engine model was compared with previous thermal models and experimental data as shown in Table~\ref{tab:EfficiencyComparison} and Table~\ref{tab:PowerComparison}.
 
@@ -421,6 +424,7 @@ Evaluation of the developed thermal model was performed by considering the GPU-3
 	\end{center}
 	\label{tab:GPU3parameters}
 \end{table*}
+
 
 \begin{table*}[htbp]\footnotesize
 	\caption{Thermal efficiency of the proposed Stirling engine model, previous thermal models and experimental data(at $T_{hw}=922\,\mathrm{K}$ and $T_{cw}=288\,\mathrm{K}$)}
@@ -580,7 +584,9 @@ Heat transferred from Stirling engine to cooling fluid in a cycle
 
 \section{Modeling of the SEAs}
 
-To determine the performance of an SEA, models of all the Stirling engines need to be built depending on their thermodynamic characteristic. Stirling engines are chosen to have the same parameters including the same speed $s_{se}$. This is especially practical when using SEA for power generation, where the output power frequency should be constant. The speed of Stirling engine can be calibrated by speed controller system~\cite{Hooshang2016}. To eliminate interference of other factors, heating and cooling fluids are chosen to have same parameters for different connection types of SEAs. To clearly find out the performance differences of different SEAs, large temperature differences of the heating/cooling fluids after heat exchange with the engines are preferred. Air is chosen as the cooling fluid instead of commonly used water to avoid small temperature rise and evaporation after the cooling process. Chosen parameters of Stirling engines and heating/cooling fluids in SEAs are shown in Table~\ref{tab:parameters}. 
+As mentioned in section~\ref{sec:connectionTypes}, there are five basic connection types for an SEA. All other connection types are the combination of these five basic connection types. This paper investigates the five basic connection types.
+
+To determine the performance of an SEA, models of all the Stirling engines need to be built depending on their thermodynamic characteristic. Stirling engines are chosen to have the same parameters including the same speed $s_{se}$. This is a reasonable assumption when using SEA for power generation, where the output power frequency should be constant. The speed of Stirling engine can be calibrated by speed controller system~\cite{Hooshang2016}. To eliminate interference of other factors, heating and cooling fluids are chosen to have same parameters for different connection types of SEAs. To clearly find out the performance differences of different SEAs, large temperature differences of the heating/cooling fluids after heat exchange with the engines are preferred. Air was chosen as the cooling fluid instead of commonly used water to avoid small temperature rise and evaporation in the cooling process. Design parameters of Stirling engines are the same as shown in Table~\ref{tab:GPU3parameters}. Other parameters of Stirling engines and heating/cooling fluids in SEAs are shown in Table~\ref{tab:parameters}. Rotation speed of the engines and mean effective pressure were chosen to be $25\,\mathrm{Hz}$ and $5\,\mathrm{MPa}$ respectively to get the best Stirling engine model for performance prediction, as pointed in section~\ref{sec:modelValidation}.
 
 \begin{table}[htbp]
 	\caption{Parameters of SEA models}
@@ -622,7 +628,7 @@ In an SEA, there are 2 flows as shown in Figure~\ref{fig:SEA}. In a serial flow,
 %(Equation~\ref{Eq:T_h}-\ref{Eq:T_parallel})
 %, there are $6n_{se} - 2$ equations for $6n_{se}$ parameters for $n_{se}$ engines. Other parameters of an SEA can be calculated by the given inlet temperature of the heating and cooling fluids. The efficiency and power of each engine can be obtained from Equation~\ref{Eq:eta},~\ref{Eq:P}. The total efficiency and power of SEA can be obtained by powers of engines and outlet properties of the fluids.
 
-MATLAB was used as the programming tool to build the model of SEAs, and CoolProp was used to provide fluid properties for MATLAB program. 5 basic SEA models composed of the aforementioned Stirling engines and fluids were built. To compare SEA connection types under various conditions, several parameters are investigated to find out their effects on SEA performance.
+MATLAB was used as the programming tool to build the model of SEAs, and CoolProp was used to provide fluid properties for MATLAB program. Five basic SEA models composed of the aforementioned Stirling engines and fluids were built. To compare SEA connection types under various conditions, several parameters are investigated to find out their effects on SEA performance.
 
 \noindent \begin{figure*}[htbp]
 \begin{center}
@@ -632,12 +638,12 @@ MATLAB was used as the programming tool to build the model of SEAs, and CoolProp
 \end{center}
 \end{figure*}
 
-Figure~\ref{fig:Flowchart} shows the solution algorithm of the SEA model. As it is shown, known inlet parameters of the fluids, the performance of a Stirling engine can be obtained from flowchart (a) according to the equations derived; similarly, known inlet parameters of heating fluid and outlet parameters of cooling fluid, the performance of a Stirling engine can be obtained from flowchart (b). Flowchart (c) shows the algorithm to solve the SEA model iteratively depending on different connection types. The levenberg-marquardt algorithm is applied to numerically solve the non-linear equations in the flowcharts.
+Figure~\ref{fig:Flowchart} shows the solution algorithm of the SEA model. Flowchart (a) shows the algorithm to solve a Stirling engine known inlet parameters of the fluids. Flowchart (b) shows the algorithm to solve a Stirling engine known inlet parameters of heating fluid and outlet parameters of cooling fluid. Flowchart (c) shows the algorithm to solve the SEA model iteratively depending on different connection types. The levenberg-marquardt algorithm is applied to numerically solve the non-linear equations in the flowcharts.
 
 \section{Result Analysis}
 %The objective of this study is to investigate SEA performance difference of different connection types. Therefore, 
 
-SEA models with specified parameters in Table~\ref{tab:parameters} were built and calculated. Results are shown in Table~\ref{tab:result}, it can be found that under specified parameters Type 3 has the highest efficiency and output power, while Type 1 has the lowest efficiency and output power.
+SEA models with specified parameters in Table~\ref{tab:parameters} were built and calculated. Results of the performances of the SEAs are shown in Table~\ref{tab:result}, it can be found that under specified parameters Type 3 has the highest efficiency and output power, while Type 1 has the lowest efficiency and output power.
 
 \begin{table}[htbp]
 	\caption{Results of SEA models under specified parameters}
@@ -715,19 +721,15 @@ By varying the number of engines in SEA, the performance levels changed accordin
 
 For Type 1, when $n_{se} \geqslant 10$, all engines stop working for given heating and cooling fluids due to small $q_mc_p$. For Type 2 and Type 3, every engine in the SEAs works, by increasing $n_{se}$, $\eta$ reduces due to smaller temperature difference of the fluids, and $P$ increases due to more operating engines. For Type 4, by checking results, it can be found that when $n_{se} = 13$,  the last engine doesn't work; when $n_{se} = 14$, only the first 10 engines will work; when $n_{se} = 15$, the working engine number drops to 9. For Type 5, by checking results, it can be found that when $n_{se} = 12$, the last 2 engines stop working; when $n_{se} = 13$, only the first 8 engines will work; when $n_{se} = 14$, the working engine number drops to 6; when $n_{se} = 15$, the working engine number drops to 4.
 
-\section{Conclusion}
-
-Connection type may change the flow rates and temperatures of the fluids, as a result the performance of the SEA will be different depending on the connection schemes. In order to compare performance of SEAs with different connections, five basic connection types of SEA were summed up according to flow type and flow order. 
-
-Analytical Stirling engine model was created to develop the SEA models for the investigation of influence of connection types. Imperfect regeneration and cycle irreversibility of Stirling engine cycle and heat exchange process between fluids and engine were considered in the model. The model was evaluated by considering the prototype GPU-3 Stirling engine as a case study. Result shows that the proposed model predicted the performance with higher accuracy than the previous models. Models of SEAs were developed to calculated the performance under different parameters to find out impacts of $T_{i,h}$, $q_{m,h}c_{p,h}$, $q_{m,c}c_{p,c}$ and $n_{se}$ on different connection types.
-
-It was found that, as expected, decrease $T_{i,h}$ and $q_{m}c_{p}$ will weaken the performance of SEA of all connection types. However, for some connection types, there exists a critical temperature below which some engines stop working. This needs to be considered for SEA connection type selection, especially when $T_{i,h}$ is low. For given $T_{i,h}$, $T_{i,c}$ and $q_mc_p$, Type 2 has the best performance and adaptability.
-
-From Figure~\ref{fig:Ti_h}-\ref{fig:n_se}, it can be found that Type 2 and Type 3 have the best performance, while Type 1 has the worst performance. Type 2 and Type 3 have similar performance under different parameters ($T_{i,h}$, $T_{i,c}$ and $q_mc_p$), which means the flow order has little influence on the performance of an SEA.
-
 For a certain connection type, increase $n_{se}$ will reduce the efficiency of SEA. For some connection types, increase $n_{se}$ will reduce the output power $P$ due to inoperative engines and smaller output power engines. Thus it is important to choose the number of engines for some connection types of SEA. 
 
-As a conclusion, SEA of serial flows has the best performance and adaptability under different parameters. Given heating and cooling fluids, using serial flow is the best choice for the connection type of an SEA. %This means the new arrangement of dish-Stirling system in Figure~\ref{fig:Dish_SEA} may have better performance than the traditional arrangement, which can be considered as a particular case of Type 1.
+\section{Conclusion}
+
+A new way to overcome the limitation of small engine capacity in dish-Stirling system by using SEA was proposed in this paper. Connection type may change the flow rates and temperatures of the fluids, as a result the performance of the SEA will be different depending on the connection schemes. In order to compare performance of SEAs with different connections, five basic connection types of SEA were summed up according to flow type and flow order. 
+
+Analytical Stirling engine model was created to develop the SEA models for the investigation of influence of connection types. Imperfect regeneration and cycle irreversibility of Stirling engine cycle and heat exchange process between fluids and engine were considered in the model. Algorithm to numerically solve different connection types of SEA was developed. The model was evaluated by considering the prototype GPU-3 Stirling engine as a case study. Result shows that the proposed model predicted the performance with higher accuracy than Simple model~\cite{Urieli1984} and Simple II model~\cite{Strauss2010}. 
+
+Models of SEAs were developed to calculated the performance under different parameters to find out the impacts of $T_{i,h}$, $q_{m,h}c_{p,h}$, $q_{m,c}c_{p,c}$ and $n_{se}$ on different connection types. It was found that, as expected, decrease $T_{i,h}$ and $q_{m}c_{p}$ will weaken the performance of SEA of all connection types. However, for some connection types, there exists a critical temperature below which some engines stop working. This needs to be considered for SEA connection type selection, especially when $T_{i,h}$ is low. For given heating and cooling fluids, Type 2 has the best performance and adaptability. Type 2 and Type 3 have similar performance under different parameters ($T_{i,h}$, $T_{i,c}$ and $q_mc_p$), which means the flow order has little influence on the performance of an SEA. SEA of serial flows has the best performance and adaptability under different parameters. Given heating and cooling fluids, using serial flow is the best choice for the connection type of an SEA. %This means the new arrangement of dish-Stirling system in Figure~\ref{fig:Dish_SEA} may have better performance than the traditional arrangement, which can be considered as a particular case of Type 1.
 
 It is important to note that, in the future researches, the experiments of influence of connection type on SEA's performance can be carried out to verify the conclusions in this paper.
 %It should be pointed out that there exists some discrepancy between the the simulation results of proposed model and the experimental data. Experiments of SEAs need to be carried out to verify the conclusions in this paper in the future. 
@@ -740,6 +742,5 @@ We gratefully acknowledge the support of International S\&T Cooperation Program 
 \clearpage
 
 \bibliography{SEA}
-\bibliographystyle{unsrt}
 
 \end{document}
